# Transformer

./: .pre-commit-config.yaml  README.md  environment.yaml  eval.py  pyproject.toml  train.py
.github/workflows/: ci.yaml
configs/: base.yaml
data/: README.md
debug/: __init__.py  attn_hook_utils.py
handmade_transformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: setup_precommit.sh
tests/: test_env.py  test_skeleton.py
tokenizer/: __init__.py  bpe.py
transformer/: __init__.py  device.py  dtype.py  layers.py  losses.py  model.py  trainer.py  utils.py
